[package]
name = "redisearchtables"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "redisearchtables"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
eq-float = "0.1.0"
futures = "0.3.30"
log = "0.4.22"
pyo3 = { version = "0.19.2", features = [
    "auto-initialize",
    "abi3-py38",
    "extension-module",
    "chrono",
] }
pyo3-asyncio = { version = "0.19.0", features = ["tokio-runtime"] }
pyo3-log = "0.8.3"
rustc-hash = "1.1.0"
bigdecimal-04 = { package = "bigdecimal", version = "0.4" }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["bytes"] }
uuid = { version = "1.9.1", features = ["v4"] }
time = { version = "*", features = ["formatting", "macros"] }
fred = { version = "9.1.2", features = ["i-redisearch", "tokio-native-tls"] }
