[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "redisearchtables"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [{name = "Diviyan K.", email = "diviyan@fentech.ai"}]
description = "Manage RediSearch indexes in a SQLAlchemy-like manner"

[tool.maturin]
features = ["pyo3/extension-module"]
